# mysite

./: pyproject.toml
mysite/: settings.py  urls.py
render/: models.py  urls.py
render/migrations/: 0001_initial.py
render/seriallizer/: user_detail.py
render/views/: user_detail.py
